--- a/mobile.html
+++ b/mobile.html
@@ -3,121 +3,273 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Booking Calendar</title>
+    <title>Chagai Booking Calendar</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 10px; font-size: 16px; }
-        .container { max-width: 100%; }
-        input, button { width: 100%; padding: 10px; margin: 5px 0; font-size: 16px; }
-        .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 2px; }
-        .day { border: 1px solid #ccc; padding: 5px; min-height: 50px; font-size: 14px; }
-        .booking { background-color: #AED6F1; margin: 2px 0; padding: 2px; border-radius: 3px; font-size: 12px; }
+        :root {
+            --primary-color: #ff6b6b;
+            --secondary-color: #4ecdc4;
+            --accent-color: #feca57;
+            --background-color: #f7f1e3;
+            --text-color: #2d3436;
+            --calendar-bg: #ffffff;
+            --calendar-border: #d1d1e0;
+            --day-bg: #f0f0f5;
+            --day-hover: #e6e6fa;
+            --header-bg: #6c5ce7;
+        }
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 10px;
+            background-color: var(--background-color);
+            color: var(--text-color);
+            font-size: 14px;
+        }
+        .container { max-width: 100%; margin: 0 auto; }
+        .welcome-message {
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            font-size: 24px;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            font-weight: 600;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+        }
+        @keyframes gradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+        .controls {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        .button {
+            background-color: var(--primary-color);
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            cursor: pointer;
+            font-size: 14px;
+            border-radius: 20px;
+            transition: all 0.3s ease;
+            font-weight: 600;
+        }
+        .calendar-container {
+            background-color: var(--calendar-bg);
+            border-radius: 10px;
+            padding: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            border: 1px solid var(--calendar-border);
+        }
+        .calendar-header {
+            background-color: var(--header-bg);
+            color: white;
+            padding: 10px;
+            text-align: center;
+            font-weight: 600;
+            border-radius: 5px 5px 0 0;
+            font-size: 18px;
+        }
+        .calendar-grid {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 2px;
+        }
+        .calendar-day {
+            background-color: var(--day-bg);
+            border: 1px solid var(--calendar-border);
+            padding: 5px;
+            min-height: 60px;
+            font-size: 12px;
+            position: relative;
+            overflow: hidden;
+        }
+        .date {
+            font-weight: bold;
+            color: var(--primary-color);
+            font-size: 14px;
+            margin-bottom: 2px;
+        }
+        .guest {
+            font-size: 10px;
+            margin-bottom: 1px;
+            padding: 2px;
+            border-radius: 3px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            color: var(--text-color);
+            border: 1px solid rgba(0,0,0,0.1);
+        }
+        .day-of-week {
+            text-align: center;
+            font-weight: bold;
+            padding: 5px;
+            background-color: var(--header-bg);
+            font-size: 12px;
+            color: white;
+        }
+        .form-container {
+            background-color: var(--calendar-bg);
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            border: 1px solid var(--calendar-border);
+        }
+        .form { display: flex; flex-direction: column; gap: 10px; }
+        input, select {
+            padding: 10px;
+            font-size: 14px;
+            border: 1px solid var(--calendar-border);
+            border-radius: 5px;
+            font-family: 'Poppins', sans-serif;
+        }
+        h2 {
+            color: var(--primary-color);
+            margin: 0 0 10px 0;
+            font-size: 18px;
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Booking Calendar</h1>
-        <input type="text" id="name" placeholder="Your Name">
-        <input type="date" id="startDate">
-        <input type="date" id="endDate">
-        <button id="bookBtn">Book Stay</button>
-        <div id="currentMonth"></div>
-        <button id="prevMonth">Previous Month</button>
-        <button id="nextMonth">Next Month</button>
-        <div id="calendar" class="calendar"></div>
+        <div class="welcome-message">CHAGAI IS WAITING FOR YOU!</div>
+        <div class="form-container">
+            <h2><i class="far fa-calendar-alt"></i> Book Your Stay</h2>
+            <div class="form">
+                <input type="text" id="newGuestName" placeholder="Your Name">
+                <input type="date" id="bookStartDate">
+                <input type="date" id="bookEndDate">
+                <button id="bookStayBtn" class="button"><i class="fas fa-check"></i> Save</button>
+            </div>
+        </div>
+        <div class="controls">
+            <button id="prevBtn" class="button"><i class="fas fa-chevron-left"></i> Prev</button>
+            <div id="currentMonthYear"></div>
+            <button id="nextBtn" class="button">Next <i class="fas fa-chevron-right"></i></button>
+        </div>
+        <div id="calendarContainer" class="calendar-container"></div>
     </div>
-
     <script>
+        const days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
         let currentDate = new Date();
         let bookings = [];
 
+        const colors = [
+            '#AED6F1', '#F5B7B1', '#A9DFBF', '#FAD7A0', '#D2B4DE',
+            '#A3E4D7', '#F9E79F', '#D5DBDB', '#ABEBC6', '#F5CBA7',
+            '#AEB6BF', '#FADBD8', '#D1F2EB', '#FCF3CF', '#D6EAF8'
+        ];
+
         function loadBookings() {
-            const stored = localStorage.getItem('bookings');
-            if (stored) {
-                bookings = JSON.parse(stored);
-                console.log("Loaded bookings:", bookings);
+            const storedBookings = localStorage.getItem('bookings');
+            if (storedBookings) {
+                bookings = JSON.parse(storedBookings);
             }
+            console.log('Loaded bookings:', bookings);
         }
 
         function saveBookings() {
             localStorage.setItem('bookings', JSON.stringify(bookings));
-            console.log("Saved bookings:", bookings);
+            console.log('Saved bookings:', bookings);
         }
 
-        function getDatesInRange(startDate, endDate) {
-            const dates = [];
-            let currentDate = new Date(startDate);
+        function bookStay(name, startDate, endDate) {
+            if (!name || !startDate || !endDate) {
+                throw new Error("All fields are required");
+            }
+            const start = new Date(startDate);
             const end = new Date(endDate);
-            while (currentDate <= end) {
-                dates.push(new Date(currentDate));
-                currentDate.setDate(currentDate.getDate() + 1);
+            for (let d = new Date(start); d <= end; d.setDate(d.getDate() + 1)) {
+                bookings.push({ name, date: d.toISOString().split('T')[0] });
             }
-            return dates;
+            saveBookings();
         }
 
-        function bookStay() {
-            const name = document.getElementById('name').value.trim();
-            const start = document.getElementById('startDate').value;
-            const end = document.getElementById('endDate').value;
-            if (name && start && end) {
-                const dates = getDatesInRange(start, end);
-                dates.forEach(date => {
-                    bookings.push({
-                        name: name,
-                        date: date.toISOString().split('T')[0]
-                    });
-                });
-                saveBookings();
-                renderCalendar();
-                document.getElementById('name').value = '';
-                document.getElementById('startDate').value = '';
-                document.getElementById('endDate').value = '';
-            } else {
-                alert('Please fill all fields');
-            }
+        function getGuestsForDay(date) {
+            const dateString = date.toISOString().split('T')[0];
+            return bookings.filter(booking => booking.date === dateString);
         }
 
         function renderCalendar() {
-            const calendarEl = document.getElementById('calendar');
-            calendarEl.innerHTML = '';
-            const year = currentDate.getFullYear();
-            const month = currentDate.getMonth();
-            const firstDay = new Date(year, month, 1);
-            const lastDay = new Date(year, month + 1, 0);
-
-            document.getElementById('currentMonth').textContent = 
-                currentDate.toLocaleString('default', { month: 'long', year: 'numeric' });
-
+            const containerEl = document.getElementById('calendarContainer');
+            containerEl.innerHTML = '';
+            const headerEl = document.createElement('div');
+            headerEl.className = 'calendar-header';
+            headerEl.textContent = currentDate.toLocaleDateString('en-US', { month: 'long', year: 'numeric' });
+            containerEl.appendChild(headerEl);
+            const gridEl = document.createElement('div');
+            gridEl.className = 'calendar-grid';
+            containerEl.appendChild(gridEl);
+            days.forEach(day => {
+                const dayOfWeekEl = document.createElement('div');
+                dayOfWeekEl.className = 'day-of-week';
+                dayOfWeekEl.textContent = day.slice(0, 1);
+                gridEl.appendChild(dayOfWeekEl);
+            });
+            const firstDay = new Date(currentDate.getFullYear(), currentDate.getMonth(), 1);
+            const lastDay = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0);
             for (let i = 0; i < firstDay.getDay(); i++) {
-                calendarEl.appendChild(document.createElement('div'));
+                gridEl.appendChild(document.createElement('div'));
             }
-
-            for (let day = 1; day <= lastDay.getDate(); day++) {
+            for (let i = 1; i <= lastDay.getDate(); i++) {
+                const date = new Date(currentDate.getFullYear(), currentDate.getMonth(), i);
                 const dayEl = document.createElement('div');
-                dayEl.className = 'day';
-                dayEl.textContent = day;
-
-                const currentDay = new Date(year, month, day).toISOString().split('T')[0];
-                const dayBookings = bookings.filter(b => b.date === currentDay);
-
-                dayBookings.forEach(booking => {
-                    const bookingEl = document.createElement('div');
-                    bookingEl.className = 'booking';
-                    bookingEl.textContent = booking.name;
-                    dayEl.appendChild(bookingEl);
+                dayEl.className = 'calendar-day';
+                const dateEl = document.createElement('div');
+                dateEl.className = 'date';
+                dateEl.textContent = i;
+                dayEl.appendChild(dateEl);
+                const guestsForDay = getGuestsForDay(date);
+                guestsForDay.forEach((guest, index) => {
+                    const guestEl = document.createElement('div');
+                    guestEl.className = 'guest';
+                    guestEl.textContent = guest.name;
+                    guestEl.style.backgroundColor = colors[index % colors.length];
+                    dayEl.appendChild(guestEl);
                 });
-
-                calendarEl.appendChild(dayEl);
+                gridEl.appendChild(dayEl);
             }
+            document.getElementById('currentMonthYear').textContent = currentDate.toLocaleDateString('en-US', { month: 'long', year: 'numeric' });
         }
 
-        document.getElementById('bookBtn').addEventListener('click', bookStay);
-        document.getElementById('prevMonth').addEventListener('click', () => {
+        document.getElementById('prevBtn').addEventListener('click', () => {
             currentDate.setMonth(currentDate.getMonth() - 1);
             renderCalendar();
         });
-        document.getElementById('nextMonth').addEventListener('click', () => {
+
+        document.getElementById('nextBtn').addEventListener('click', () => {
             currentDate.setMonth(currentDate.getMonth() + 1);
             renderCalendar();
+        });
+
+        document.getElementById('bookStayBtn').addEventListener('click', () => {
+            const name = document.getElementById('newGuestName').value.trim();
+            const startDate = document.getElementById('bookStartDate').value;
+            const endDate = document.getElementById('bookEndDate').value;
+            try {
+                bookStay(name, startDate, endDate);
+                renderCalendar();
+                document.getElementById('newGuestName').value = '';
+                document.getElementById('bookStartDate').value = '';
+                document.getElementById('bookEndDate').value = '';
+            } catch (error) {
+                alert(error.message);
+            }
         });
 
         window.addEventListener('DOMContentLoaded', () => {
