--- a/mobile.html
+++ b/mobile.html
@@ -37,11 +37,13 @@
             text-align: center;
             font-size: 24px;
             margin-bottom: 20px;
-            border-radius: 10px;
+            border-radius: 15px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             font-weight: 600;
             letter-spacing: 1px;
             text-transform: uppercase;
+            overflow: hidden;
+            position: relative;
         }
         @keyframes gradient {
             0% { background-position: 0% 50%; }
@@ -52,7 +54,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         .button {
             background-color: var(--primary-color);
@@ -61,43 +63,41 @@
             padding: 10px 15px;
             cursor: pointer;
             font-size: 14px;
-            border-radius: 20px;
+            border-radius: 30px;
             transition: all 0.3s ease;
             font-weight: 600;
-        }
-        .calendar-container {
-            background-color: var(--calendar-bg);
-            border-radius: 10px;
-            padding: 10px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-            border: 1px solid var(--calendar-border);
-        }
-        .calendar-header {
-            background-color: var(--header-bg);
-            color: white;
-            padding: 10px;
-            text-align: center;
-            font-weight: 600;
-            border-radius: 5px 5px 0 0;
-            font-size: 18px;
+            display: flex;
+            align-items: center;
+            gap: 5px;
         }
         .calendar-grid {
             display: grid;
             grid-template-columns: repeat(7, 1fr);
-            gap: 2px;
+            gap: 1px;
+            background-color: #d1d1e0;
+            border: 1px solid #d1d1e0;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        .calendar-header {
+            background-color: var(--header-bg);
+            color: white;
+            padding: 8px 0;
+            text-align: center;
+            font-weight: 600;
+            font-size: 12px;
         }
         .calendar-day {
-            background-color: var(--day-bg);
-            border: 1px solid var(--calendar-border);
+            background-color: #ffffff;
             padding: 5px;
             min-height: 60px;
             font-size: 12px;
-            position: relative;
-            overflow: hidden;
+            border: 1px solid #e0e0e0;
+            display: flex;
+            flex-direction: column;
         }
         .date {
-            font-weight: bold;
+            font-weight: 600;
             color: var(--primary-color);
             font-size: 14px;
             margin-bottom: 2px;
@@ -105,29 +105,21 @@
         .guest {
             font-size: 10px;
             margin-bottom: 1px;
-            padding: 2px;
-            border-radius: 3px;
+            padding: 2px 4px;
+            border-radius: 10px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            color: var(--text-color);
+            color: #34495e;
             border: 1px solid rgba(0,0,0,0.1);
-        }
-        .day-of-week {
-            text-align: center;
-            font-weight: bold;
-            padding: 5px;
-            background-color: var(--header-bg);
-            font-size: 12px;
-            color: white;
         }
         .form-container {
             background-color: var(--calendar-bg);
             padding: 15px;
-            border-radius: 10px;
+            border-radius: 15px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             margin-bottom: 20px;
-            border: 1px solid var(--calendar-border);
+            border: 2px solid var(--calendar-border);
         }
         .form { display: flex; flex-direction: column; gap: 10px; }
         input, select {
@@ -141,6 +133,11 @@
             color: var(--primary-color);
             margin: 0 0 10px 0;
             font-size: 18px;
+            font-weight: 600;
+        }
+        #currentMonthYear {
+            font-size: 18px;
+            color: var(--header-bg);
             font-weight: 600;
         }
     </style>
@@ -208,31 +205,30 @@
         function renderCalendar() {
             const containerEl = document.getElementById('calendarContainer');
             containerEl.innerHTML = '';
-            const headerEl = document.createElement('div');
-            headerEl.className = 'calendar-header';
-            headerEl.textContent = currentDate.toLocaleDateString('en-US', { month: 'long', year: 'numeric' });
-            containerEl.appendChild(headerEl);
-            const gridEl = document.createElement('div');
-            gridEl.className = 'calendar-grid';
-            containerEl.appendChild(gridEl);
+            const calendarGrid = document.createElement('div');
+            calendarGrid.className = 'calendar-grid';
+            
             days.forEach(day => {
-                const dayOfWeekEl = document.createElement('div');
-                dayOfWeekEl.className = 'day-of-week';
-                dayOfWeekEl.textContent = day.slice(0, 1);
-                gridEl.appendChild(dayOfWeekEl);
+                const headerEl = document.createElement('div');
+                headerEl.className = 'calendar-header';
+                headerEl.textContent = day.slice(0, 3);
+                calendarGrid.appendChild(headerEl);
             });
-            const firstDay = new Date(currentDate.getFullYear(), currentDate.getMonth(), 1);
-            const lastDay = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0);
-            for (let i = 0; i < firstDay.getDay(); i++) {
-                gridEl.appendChild(document.createElement('div'));
+
+            const monthStart = new Date(currentDate.getFullYear(), currentDate.getMonth(), 1);
+            const monthEnd = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0);
+
+            for (let d = 0; d < monthStart.getDay(); d++) {
+                calendarGrid.appendChild(document.createElement('div'));
             }
-            for (let i = 1; i <= lastDay.getDate(); i++) {
-                const date = new Date(currentDate.getFullYear(), currentDate.getMonth(), i);
+
+            for (let d = 1; d <= monthEnd.getDate(); d++) {
+                const date = new Date(currentDate.getFullYear(), currentDate.getMonth(), d);
                 const dayEl = document.createElement('div');
                 dayEl.className = 'calendar-day';
                 const dateEl = document.createElement('div');
                 dateEl.className = 'date';
-                dateEl.textContent = i;
+                dateEl.textContent = d;
                 dayEl.appendChild(dateEl);
                 const guestsForDay = getGuestsForDay(date);
                 guestsForDay.forEach((guest, index) => {
@@ -242,9 +238,11 @@
                     guestEl.style.backgroundColor = colors[index % colors.length];
                     dayEl.appendChild(guestEl);
                 });
-                gridEl.appendChild(dayEl);
+                calendarGrid.appendChild(dayEl);
             }
-            document.getElementById('currentMonthYear').textContent = currentDate.toLocaleDateString('en-US', { month: 'long', year: 'numeric' });
+
+            containerEl.appendChild(calendarGrid);
+            document.getElementById('currentMonthYear').textContent = currentDate.toLocaleString('en-US', { month: 'long', year: 'numeric' });
         }
 
         document.getElementById('prevBtn').addEventListener('click', () => {
